k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: voting-backend
  namespace: polling-app
spec:
  selector:
    app: voting-backend
  ports:
    - port: 8080
      targetPort: 8080
