k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: voting-frontend
  namespace: polling-app
spec:
  type: ClusterIP
  selector:
    app: voting-frontend
  ports:
    - port: 80
      targetPort: 80
